[gd_scene load_steps=4 format=3 uid="uid://brjfchhrhfopx"]

[ext_resource type="Script" path="res://slot.gd" id="1_2ikv0"]
[ext_resource type="Texture2D" uid="uid://cke2id1t2eugv" path="res://inventoryBox3.png" id="1_ifcq8"]
[ext_resource type="Texture2D" uid="uid://dqv40y25r45ti" path="res://inventorySlot1.png" id="2_wdvxr"]

[node name="Slot" type="Control"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1120.0
offset_bottom = -616.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ikv0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0

[node name="SlotNum" type="Label" parent="Panel"]
z_index = 7
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 31.0
offset_bottom = 25.0
scale = Vector2(0.32, 0.28)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 0

[node name="TextureButton" type="TextureButton" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture_normal = ExtResource("1_ifcq8")
texture_pressed = ExtResource("2_wdvxr")
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/TextureButton"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 31.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.992157, 0.992157, 0.992157, 1)

[node name="ContentTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 26.0
offset_bottom = 26.0
mouse_filter = 2
expand_mode = 1

[connection signal="pressed" from="Panel/TextureButton" to="." method="_on_texture_button_pressed"]
